--- a/index.css
+++ b/index.css
@@ -113,6 +113,19 @@ body {
   background-color: #0056b3;
 }
 
+#co2-slider {
+  width: 90%;
+}
+
+#play-button {
+  background-color: white;
+  border-color: grey;
+  position: relative;
+  margin: 2px;
+  top: -3px;
+  left: 3px;
+}
+
 /* Fade-out animation */
 @keyframes fadeOut {
   from {
